@@ -1,3 +1,8 @@
+2008-11-25  Matthias Wimmer  <m@tthias.eu>
+
+    * jabberd/base/base_accept.cc: improvement in failure recovery for dynamic
+    	routings
+
 2008-11-22  Matthias Wimmer  <m@tthias.eu>
 
     * jabberd/mio_tls.cc: method signatures for OpenPGP support have changed
